# exercices-seance-1

./: .gitignore  README.md  pyproject.toml  requirements.txt  script_pathlib.py
output/: clean_data.csv
seance2_PARSER/: README.MD
seance2_PARSER/data/: data.json  data.xml
seance2_PARSER/src/: parser_multiformat.py
src/: main.py
src/projet_logs/: __init__.py
